@@ -106,6 +106,7 @@ Please note that our support for the checkout block is still experimental and th
 * Fix - Payment form hides when saved card is selected.
 * Fix - Render dispute evidence file upload errors.
 * Fix - Increase timeout for calls to the API server.
+* Fix - Correctly display the fee and net amounts for a charge with an inquiry.
 
 = 1.6.0 - 2020-10-15 =
 * Fix - Trimming the whitespace when updating the bank statement descriptor.
